--- a/social.html
+++ b/social.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Socialnet.</title>
-    <link rel="stylesheet" href="dist/css/social.min.css">
+    <link rel="stylesheet" href="">
 </head>
 <body>
     <nav class="navbar bg-dark">
@@ -22,3 +22,4 @@
     </nav>
 </body>
 </html> 
+
