--- a/resources/_boiler.html
+++ b/resources/_boiler.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,31 +8,23 @@
     <title>Socialnet.</title>
     <link rel="stylesheet" href="css/social.css">
 </head>
+
 <body>
     <nav class="navbar bg-dark">
         <h1>
             <a href="dashboard.html">
                 <i class="fas fa-code"></i> DevConnector
             </a>
-        </h1> 
+        </h1>
         <ul>
             <li><a href="profiles.html">Developers</a></li>
             <li><a href="register.html">Register</a></li>
             <li><a href="login.html">Login</a></li>
         </ul>
     </nav>
-    <section class="landing">
-        <div class="dark-overlay">
-            <div class="landing-inner">
-                <h1 class="x-large">Developer Connector</h1>
-                <p class="lead">Create developer profile/portfolio, share posts and get help from other developers.</p>
-                <div class="buttons">
-                    <a href="register.html" class="btn btn-primary">Sign Up</a>
-                    <a href="login.html" class="btn">Login</a>
-                </div>
-            </div>
-        </div>
+    <section class="container">
+        
     </section>
 </body>
-</html> 
 
+</html>
