--- a/resources/_boiler.html
+++ b/resources/_boiler.html
@@ -23,7 +23,8 @@
         </ul>
     </nav>
     <section class="container">
-        
+        <h1 class="large text-primary">HEADING</h1>
+        <p class="lead"><i class="fas fa-user">TEXT</i></p>
     </section>
 </body>
 
