--- a/profiles.html
+++ b/profiles.html
@@ -24,7 +24,7 @@
     </nav>
     <section class="container">
         <h1 class="large text-primary">Developers</h1>
-        <p class="lead"><i class="fas fa-connectdevelop">Browse and connect with developers</i></p>
+        <p class="lead"><i class="fab fa-connectdevelop">Browse and connect with developers</i></p>
         <div class="profiles">
             <div class="profile bg-light">
                 <img src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50?s=200" alt="Avatar" class="round-img">
@@ -33,7 +33,7 @@
                     <h2>Victor Egwu</h2>
                     <p>Forex Trader at Dubai</p>
                     <p>Bassey, ST</p>
-                    <a href="profiles.html" class="btn btn-primary">View Profile</a>
+                    <a href="profile.html" class="btn btn-primary">View Profile</a>
                 </div>
 
                 <ul>
@@ -62,7 +62,7 @@
                     <h2>Victor Egwu</h2>
                     <p>Forex Trader at Dubai</p>
                     <p>Bassey, ST</p>
-                    <a href="profiles.html" class="btn btn-primary">View Profile</a>
+                    <a href="profile.html" class="btn btn-primary">View Profile</a>
                 </div>
         
                 <ul>
