--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Socialnet.</title>
+    <title>Profiles.</title>
     <link rel="stylesheet" href="css/social.css">
 </head>
 
@@ -27,11 +27,11 @@
 
         <div class="profile-grid my-1">
             <!-- TOP -->
-            <div class="profile-top bg-primary p-2">
-                <img src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50?s=200" alt="Avatar" class="round-img">
+            <div class="profile-top bg-primary p-2 p3">
+                <img src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50?s=200" alt="Avatar" class="round-img my-1">
 
-                <h1 class="large">Victor Egwu</h1>
-                <p class="lead">Trader at Dubai</p>
+                <h1 class="">Victor Egwu</h1>
+                <p>Trader at Dubai</p>
                 <p>South, South</p>
                 <div class="icons my-1">
                     <a href="#" class="fas ga-globe fa-2x"></a>
@@ -147,6 +147,6 @@
             </div>
         </div>
     </section>
-</body>
+</body> 
 
 </html>
