--- a/profile.html
+++ b/profile.html
@@ -100,7 +100,7 @@
             <!-- GiTHUB REPOS -->
             <div class="profile-github">
                 <h2 class="text-primary my1"><i class="fab fa-github"></i>Github Repos</h2>
-                <div class="repo bg-white my-1">
+                <div class="repo bg-white my-1 p-1">
                     <div>
                         <h4><a href="#">Repo one</a></h4>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti delectus tempore eum!</p>
@@ -115,7 +115,7 @@
                     </div>
                 </div>
 
-                <div class="repo bg-white my-1">
+                <div class="repo bg-white my-1 p-1">
                     <div>
                         <h4><a href="#">Repo Two</a></h4>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti delectus tempore eum!</p>
@@ -130,7 +130,7 @@
                     </div>
                 </div>
 
-                <div class="repo bg-white my-1">
+                <div class="repo bg-white my-1 p-1">
                     <div>
                         <h4><a href="#">Repo Three</a></h4>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti delectus tempore eum!</p>
@@ -145,7 +145,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> 
     </section>
 </body> 
 
