--- a/profiles.html
+++ b/profiles.html
@@ -38,13 +38,13 @@
 
                 <ul>
                     <li class="text-primary">
-                        <i class="fas fa-check"></i> HTML
+                        <i class="fas fa-check"></i> MIX
                     </li>
                     <li class="text-primary">
-                        <i class="fas fa-check"></i> CSS
+                        <i class="fas fa-check"></i> BOTS
                     </li>
                     <li class="text-primary">
-                        <i class="fas fa-check"></i> Javascript
+                        <i class="fas fa-check"></i> GOLD
                     </li>
                     <li class="text-primary">
                         <i class="fas fa-check"></i> SASS
@@ -59,24 +59,24 @@
                     class="round-img">
         
                 <div>
-                    <h2>Victor Egwu</h2>
-                    <p>Forex Trader at Dubai</p>
-                    <p>Bassey, ST</p>
-                    <a href="profile.html" class="btn btn-primary">View Profile</a>
+                    <h2>Kyle Kax</h2>
+                    <p>Blockchain Jno</p>
+                    <p>Califonia, CY</p>
+                    <a href="#" class="btn btn-primary">View Profile</a>
                 </div>
         
                 <ul>
                     <li class="text-primary">
-                        <i class="fas fa-check"></i> HTML
+                        <i class="fas fa-check"></i> BTCC
                     </li>
                     <li class="text-primary">
-                        <i class="fas fa-check"></i> CSS
+                        <i class="fas fa-check"></i> CSSA
                     </li>
                     <li class="text-primary">
-                        <i class="fas fa-check"></i> Javascript
+                        <i class="fas fa-check"></i> ETHM
                     </li>
                     <li class="text-primary">
-                        <i class="fas fa-check"></i> SASS
+                        <i class="fas fa-check"></i> TRXN
                     </li>
                 </ul>
             </div>
