--- a/dashboard.html
+++ b/dashboard.html
@@ -28,8 +28,8 @@
         <p class="lead"><i class="fas fa-user">Welcome Victor Egwu</i></p>
         <div class="dash-buttons">
             <a href="create-profile.html" class="btn"><i class="fas fa-user-circle text-primary"></i> Edit Profile</a>
-            <a href="create-profile.html" class="btn"><i class="fab fa-black-tie text-primary"></i> Add Experience</a>
-            <a href="create-profile.html" class="btn"><i class="fas fa-graduation-cap text-primary"></i> Add Education</a>
+            <a href="add-experience.html" class="btn"><i class="fab fa-black-tie text-primary"></i> Add Experience</a>
+            <a href="add-education.html" class="btn"><i class="fas fa-graduation-cap text-primary"></i> Add Education</a>
         </div>
 
         <h2 class="my-2">Experience Credentials</h2>
