--- a/add-education.html
+++ b/add-education.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Socialnet.</title>
+    <title>Social|AddEdu.</title>
     <link rel="stylesheet" href="css/social.css">
 </head>
 
@@ -24,7 +24,7 @@
         </ul>
     </nav>
     <section class="container">
-        <h1 class="large text-primary">HEADING</h1>
+        <h1 class="large text-primary"></h1>
         <p class="lead"><i class="fas fa-user">TEXT</i></p>
     </section>
 </body>
