--- a/add-education.html
+++ b/add-education.html
@@ -25,7 +25,7 @@
     </nav>
     <section class="container">
         <h1 class="large text-primary"></h1>
-        <p class="lead"><i class="fas fa-user">TEXT</i></p>
+        <p class="lead"><i class="fas fa-user"></i></p>
     </section>
 </body>
 
