--- a/dashboard.html
+++ b/dashboard.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar bg-dark">
         <h1>
-            <a href="dashboard.html">
+            <a href="social.html">
                 <i class="fas fa-code"></i> DevConnector
             </a>
         </h1>
