--- a/social.html
+++ b/social.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar bg-dark">
         <h1>
-            <a href="dashboard.html">
+            <a href="#">
                 <i class="fas fa-code"></i> DevConnector
             </a>
         </h1> 
