--- a/add-education.html
+++ b/add-education.html
@@ -20,12 +20,42 @@
             <li><a href="profiles.html">Developers</a></li>
             <li><a href="posts.html">Posts</a></li>
             <li><a href="dashboard.html"><i class="fas fa-user"></i><span class="hide-sm">Dashboard</span></a></li>
-            <li><a href="login.html"><i class="fas fa-sign-out-alt"></i><span class="hide-sm">Login</span></a></li>
+            <li><a href="login.html"><i class="fas fa-sign-out-alt"></i><span class="hide-sm">Logout</span></a></li>
         </ul>
     </nav>
     <section class="container">
-        <h1 class="large text-primary"></h1>
-        <p class="lead"><i class="fas fa-user"></i></p>
+        <h1 class="large text-primary">Add Your Education</h1>
+        <p class="lead"><i class="fas fa-user"></i>Add any school, bootcamp, etc that you have attended</p>
+        <small>* = required field</small>
+        <form action="" class="form">
+            <div class="form-group">
+                <input type="text" placeholder="* School or Bootcamp" name="school" required>
+            </div>
+            <div class="form-group">
+                <input type="text" placeholder="* Degree or Certificate" name="degree" required>
+            </div>
+            <div class="form-group">
+                <input type="text" placeholder="Field OF Study" name="study">
+            </div>
+            <div class="form-group">
+                <label for="" class="">From Date</label>
+                <input type="date" name="from">
+            </div>
+            <div class="form-group">
+                <label for="" class="">To Date</label>
+                <input type="date" name="to">
+            </div>
+            <div class="form-group">
+                <p>
+                    <input type="checkbox" name="current">current School
+                </p>
+            </div>
+            <div class="form-group">
+                <textarea name="description" id="" cols="30" rows="5" placeholder="Program Description"></textarea>
+            </div>
+            <input type="submit" class="btn btn-primary my-1">
+            <a href="dashboard.html" class="btn btn-light my-1">Go Back</a>
+        </form>
     </section>
 </body>
 
