--- a/add-experience.html
+++ b/add-experience.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Socialnet.</title>
+    <title>Social|AddEdu.</title>
     <link rel="stylesheet" href="css/social.css">
 </head>
 
@@ -20,12 +20,42 @@
             <li><a href="profiles.html">Developers</a></li>
             <li><a href="posts.html">Posts</a></li>
             <li><a href="dashboard.html"><i class="fas fa-user"></i><span class="hide-sm">Dashboard</span></a></li>
-            <li><a href="login.html"><i class="fas fa-sign-out-alt"></i><span class="hide-sm">Login</span></a></li>
+            <li><a href="login.html"><i class="fas fa-sign-out-alt"></i><span class="hide-sm">Logout</span></a></li>
         </ul>
     </nav>
     <section class="container">
-        <h1 class="large text-primary">HEADING</h1>
-        <p class="lead"><i class="fas fa-user">TEXT</i></p>
+        <h1 class="large text-primary">Add Your Experience</h1>
+        <p class="lead"><i class="fas fa-user"></i>Add any Jobs, companies, etc that you have worked in</p>
+        <small>* = required field</small>
+        <form action="" class="form">
+            <div class="form-group">
+                <input type="text" placeholder="* Company" name="company" required>
+            </div>
+            <div class="form-group">
+                <input type="text" placeholder="* Position" name="position" required>
+            </div>
+            <div class="form-group">
+                <input type="text" placeholder="Field OF Specialty" name="field">
+            </div>
+            <div class="form-group">
+                <label for="" class="">From Date</label>
+                <input type="date" name="from">
+            </div>
+            <div class="form-group">
+                <label for="" class="">To Date</label>
+                <input type="date" name="to">
+            </div>
+            <div class="form-group">
+                <p>
+                    <input type="checkbox" name="current">current Company
+                </p>
+            </div>
+            <div class="form-group">
+                <textarea name="description" id="" cols="30" rows="5" placeholder="Company Description"></textarea>
+            </div>
+            <input type="submit" class="btn btn-primary my-1">
+            <a href="dashboard.html" class="btn btn-light my-1">Go Back</a>
+        </form>
     </section>
 </body>
 
