--- a/posts.html
+++ b/posts.html
@@ -36,7 +36,7 @@
                 <input type="submit" class="btn btn-dark my-1">
             </form>
             <div class="posts">
-                <div class="post bg-white my-1">
+                <div class="post bg-white my-1 p-1">
                     <div>
                         <a href="profile.html">
                             <img src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50?s=200" alt="Avatar" class="round-img">
@@ -55,7 +55,7 @@
                         <a href="post.html" class="btn btn-primary">Discussion</a>
                     </div>
                 </div>
-                <div class="post bg-white my-1">
+                <div class="post bg-white my-1 p-1">
                     <div>
                         <a href="profile.html">
                             <img src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50?s=200" alt="Avatar"
@@ -71,7 +71,7 @@
                             sapiente nisi.
                         </p>
                         <button class="btn">
-                            <i class="fas fa-thumbs-up"></i> <span>4</span>
+                            <i class="fas fa-thumbs-up"></i> <span>16</span>
                         </button>
                         <button class="btn"><i class="fas fa-thumbs-down"></i></button>
                         <a href="post.html" class="btn btn-primary">Discussion</a>
