--- a/posts.html
+++ b/posts.html
@@ -40,7 +40,7 @@
                     <div>
                         <a href="profile.html">
                             <img src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50?s=200" alt="Avatar" class="round-img">
-                            <h4>Vicor Egwu</h4>
+                            <h4>Victor Egwu</h4>
                         </a>
                     </div>
 
