--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar bg-dark">
         <h1>
             <a href="#">
-                <i class="fas fa-code"></i> DevConnector
+                 DevConnector
             </a>
         </h1> 
         <ul>
